// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load and _performForm test 1`] = `null`;

exports[`openOperationByUrl 1`] = `null`;

exports[`performOperationResult UPDATE_USER_INFO 1`] = `null`;

exports[`performOperationResult finished 1`] = `
<div
  className="document-content"
  id="document-content___test"
>
  <div>
    <div
      className="finishedResult"
    >
      <div
        className="mb-3"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Successfully completed.",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`performOperationResult finished with message 1`] = `
<div
  className="document-content"
  id="document-content___test"
>
  <div>
    <div
      className="finishedResult"
    >
      <div
        className="mb-3"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Finish message<br/>with html",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`performOperationResult finished with message and actions 1`] = `
<div
  className="document-content"
  id="document-content___test"
>
  <div>
    <div
      className="finishedResult"
    >
      <div
        className="mb-3"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Finish message<br/>with html",
          }
        }
      />
    </div>
  </div>
</div>
`;
